fix: correct issues of upsert method and throw not found when settings are missing